uua - code clean up